Adding code review fixes.